@@ -67,6 +67,7 @@ JNO="No"
 JNONE="None"
 JNOTICE="Notice"
 JOFF="Off"
+JOFFLINE_MESSAGE="This site is down for maintenance.<br /> Please check back again soon."
 JON="On"
 JOPTIONS="Options"
 JPAGETITLE="%1$s - %2$s"
